clusters/on-prem-cluster/apps/your-spotify/your-spotify-client/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: your-spotify-client-ingress
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:ZRxlhWJbakPR/z3uAx9YkGYl2hEP5zntrFZDEpYqXlZhXg0H,iv:Cgy8YKWDEJLJuGs4AdcaX2KUZk6be8e//FZPIA/1c2Q=,tag:Gu0UkfpdbVDqPblb2J2HBg==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:Sc6hbafzGcVZ+RaxrCGr1/A9iJa/cSxZGzT/Ow48dw5izg5S,iv:NQe/qh/TcvNJxBJFU7R5nLZz8yrDVs7jj4gXXNx7ZL8=,tag:5+s4WjH0oIuf1K1L+GBuVA==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: your-spotify-client-service
                        port:
                            number: 3000
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBdllHWWduUnYzMWtxdHMw
[...]
            mKKCOf3HaOZl8fZnirKPe+oFb4h7HdK5JvB+/vnhsdX/ElFvwL34gg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-10-15T18:39:17Z"
    mac: ENC[AES256_GCM,data:epbismegwH32KHRlhChPdw5tCMo1YKv9MASgzpNuI+ylonsyKETJJoxST7i26aYYWCarMjIUygZgipOmDLw0kIFsjczKTzb3lcgnlQkDvLW1rxVi0ERfHtzHwMjsjZ+4EW3UNgGh3oXFCS+INyo33M82cz8NzJmQ6C3ENmvLVI0=,iv:ActpH0JeMyQ84K6eUC96uuqsRl0bP4pNmiHGu+q4Myo=,tag:9Cri1dJoIoUiaGwHCfqerw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.7.3
